# ChangeLog for dev-lang/ghc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.205 2011/06/05 16:27:38 slyfox Exp $

  05 Jun 2011; Sergei Trofimovich <slyfox@gentoo.org> -files/10ghc,
  -ghc-6.2.2.ebuild, -ghc-6.4.2.ebuild, -files/ghc-6.4.2-sparc32plus.patch,
  -files/ghc-6.4.2-sparcmangler.patch, -files/ghc-6.5-norelax.patch,
  -ghc-6.6.ebuild, -ghc-6.6.1.ebuild, -files/ghc-6.6-nothreadedrts.patch,
  -ghc-6.8.2.ebuild, -ghc-6.8.2-r1.ebuild, -files/ghc-6.10.2-readline.patch,
  -files/depsort.py, -files/ghc-updater:
  Remove old ghc versions. Many of them are very hard to impossible to
  build/use.

*ghc-6.12.3-r2 (25 Apr 2011)

  25 Apr 2011; Sergei Trofimovich <slyfox@gentoo.org> -ghc-6.12.3-r1.ebuild,
  +ghc-6.12.3-r2.ebuild, +files/ghc-6.12.3-configure-CHOST-prefix.patch,
  +files/ghc-6.12.3-darwin8.patch,
  +files/ghc-6.12.3-mach-o-relocation-limit.patch,
  +files/ghc-6.12.3-pic-powerpc.patch,
  +files/ghc-6.12.3-powerpc-darwin-no-mmap.patch, files/ghc-apply-gmp-hack:
  Added support for x86-macos/ppc-macos/x85-solaric/ppc-solaris systems by
  Fabian Groffen <grobian@gentoo.org>.

*ghc-6.12.3-r1 (27 Mar 2011)

  27 Mar 2011; Sergei Trofimovich <slyfox@gentoo.org> +ghc-6.12.3-r1.ebuild,
  +files/ghc-6.12.3-ticket-2615-linker-script.patch:
  Migrated to EAPI=3: initial PREFIX support (based on work of grobian);
  USE=unicode for ncurses is a required depend (bug #326237 by Josh
  Cartwright and others). Added linker script support to workaround bug
  #311361 by Maciej Piechotka.

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> ghc-6.12.3.ebuild:
  ppc/ppc64 stable wrt #338652

  05 Feb 2011; Sergei Trofimovich <slyfox@gentoo.org> ghc-6.12.3.ebuild,
  +files/ghc-6.12.3-libffi-incorrect-detection-of-selinux.patch:
  Backported libffi fix from upstream. It fixes GHCi operation on GRSEC
  kernel for TPE restricted users. Thanks to klondike!
