@@ -49,14 +49,14 @@ DIST ghc-bin-6.12.3-sparc.tbz2 79140624 RMD160 f18441723c13d46f64942e195c4c0324b
 DIST ghc-bin-6.12.3-x86-fbsd.tbz2 78971971 RMD160 e8a852e260d78bf5e3851952d5fb850f46ca89b1 SHA1 c08e81718202513f16219de29880271676473461 SHA256 8c39359b3dad6216a1b92464468f9c554d5bae546b037f57d7dccb8ecd5f9f7a
 DIST ghc-bin-6.12.3-x86.tbz2 82262946 RMD160 8256df61e6998d819c7d40d613037c5f313c948b SHA1 73dc4422bbabf5c0d8de4a6672db4b3fedd42f9c SHA256 0d74a18473d6303e8818a6bd1de87f6dfd86466e7d967d68707a6c255a96945d
 EBUILD ghc-6.10.4-r1.ebuild 13011 RMD160 4feb3ad764af5ad16b3dd5a000d49755c8b91c2a SHA1 c8eb3181598c05053e1f27b5fdb2a3a4264377b1 SHA256 f8c163192a9c5a62158bbb5698cef9872fa0e64956689aeafb3f90c8c9670b0a
-EBUILD ghc-6.12.3-r2.ebuild 20276 RMD160 ad0894c2d92610bffa37d965bee82b89b4f19a59 SHA1 cba6efd2f15ec5ba0542f69a3cbd2de9088ca903 SHA256 4eb350d6a8ae8261485831929185bafc28d29507daa2d2a839ffade9f00939af
-EBUILD ghc-6.12.3.ebuild 14839 RMD160 6ec6a88c9d4f616b32e8073610f051f0e86d7357 SHA1 b8c1b5c5bf6fe3db063e66f4997b7ab34c78d73e SHA256 cacb480c299072e2a004599682e8b4b04038997bde27ed47c7799398ca1cac0a
-MISC ChangeLog 37820 RMD160 9a384eb68929a13fe209d89b5b3632bda705c71b SHA1 ee303c001f8986e82758f6e10c373b798f2b25c3 SHA256 e3e1209b5194a9012db45b7732a1cee517588e2d0a834f169cef5e5a113efa78
+EBUILD ghc-6.12.3-r2.ebuild 20515 RMD160 6db339fd7d94a8db5d8cd30730037151855bbaf9 SHA1 be6f59c823756aab0ce6c8e492469855b6d04cde SHA256 2a14fff51f910460049540a77e006e0978e7f623907b273bacf779c88d418694
+EBUILD ghc-6.12.3.ebuild 15063 RMD160 6476ac66f125ad0d2c13351a73e560b1df67c822 SHA1 15d9cd33ba4bb23b31d8a03111d31d4bd1bfe603 SHA256 f968048385c848f60007ea9bca2598c7d26a06a02945557b912dd587636d3ece
+MISC ChangeLog 38004 RMD160 c0e44c85584e5b4ee631729ae7f59480b39fe7b5 SHA1 7f32c133166c62aa0625e87927cb97cb7c87cc71 SHA256 a37fbf9eca22d25e695a4f18bd03db4d573a17f321e1f5cbea6336bcea6969e3
 MISC metadata.xml 442 RMD160 9cfa0af9084477c8a70ecf0ac3fb3093ae0cd602 SHA1 be2833090f093ac1c8fc2f5c6f3f253bdbdd6b96 SHA256 2bacbdfcaea11289949a687626f59f99af8fda9ec495b2c349ce5898d9f0dcd4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3rrzcACgkQcaHudmEf86pfuwCeIZ5vNW+SRyOcJK5+JyRKT8WR
-4cgAnj6lAP777F6mQRAALqaFlhnvpFFp
-=fZzM
+iEYEARECAAYFAk4TWRYACgkQcaHudmEf86rgPQCfbAE6mOSzYn4xv7UIug30YSzo
+Vi8AnAmc2j957q686KIcdGRlznoALfjs
+=25X+
 -----END PGP SIGNATURE-----
